--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 ;" data-marpit-pagination-total="120">
 <h1 is="marp-h1" data-auto-scaling id="keyboards"> Keyboards!</h1>
 <h2 id="by-jono">by Jono</h2>
-<p>(to see text in speaker notes press &lt;a href="/?view=presenter"&gt;&quot;p&quot;&lt;/a&gt;)</p>
+<p>(to see text in speaker notes press <a href="/?view=presenter" target="_blank">&quot;p&quot;</a>)</p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -2014,7 +2014,7 @@
 }
 ;" data-marpit-pagination-total="120">
 <p><a href="https://www.youtube.com/embed/e4ODi1hbUd4">Switch sounds demo</a></p>
-&lt;iframe width="100%" height="100%" src="https://www.youtube.com/embed/e4ODi1hbUd4?si=-dVsTCyJLVbvw3Gl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/e4ODi1hbUd4?si=-dVsTCyJLVbvw3Gl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="39" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -2040,7 +2040,7 @@
 }
 ;" data-marpit-pagination-total="120">
 <p><a href="https://www.youtube.com/watch?v=U7Y50T7NKyw">Keyboard ASMR</a></p>
-&lt;iframe width="100%" height="100%" src="https://www.youtube.com/embed/U7Y50T7NKyw?si=SU8qTELzzgMnfMsl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/U7Y50T7NKyw?si=SU8qTELzzgMnfMsl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -2260,8 +2260,8 @@
   text-align: left;
 }
 ;" data-marpit-pagination-total="120">
-<p>&lt;video 
-src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" controls&gt;&lt;/video&gt;</p>
+<p><video 
+src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" controls></video></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="45" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -4769,7 +4769,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 }
 ;" data-marpit-pagination-total="120">
 <p><a href="https://www.youtube.com/watch?v=eNeYmr48JUM">Touch typing handshape comparison</a></p>
-&lt;iframe width="100%" height="100%" src="https://www.youtube.com/embed/eNeYmr48JUM?si=0gQho2SfR7FodLL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eNeYmr48JUM?si=0gQho2SfR7FodLL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="100" data-class="lead" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -5472,9 +5472,9 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 }
 ;" data-marpit-pagination-total="120">
 <p><a href="https://kbd.news/meetups">Meetups</a></p>
-&lt;div class="scroll"&gt;
+<div class="scroll">
 <p><img src="./media/Keyboard-Meetups.png" alt="" /></p>
-&lt;/div&gt;
+</div>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -5520,7 +5520,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-;--marpit-advanced-background-split:40%;" data-marpit-pagination-total="120" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">&lt;div class="scroll"&gt;
+;--marpit-advanced-background-split:40%;" data-marpit-pagination-total="120" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right"><div class="scroll">
 <h2 id="mechanical-keyboards">Mechanical Keyboards</h2>
 <p>/r/mechmarket<br />
 /r/switchmodders<br />
@@ -5556,7 +5556,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 /r/typewriters<br />
 /r/BucklingSprings<br />
 /r/Topre</p>
-&lt;/div&gt;
+</div>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -5595,7 +5595,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 <h1 id="key-takeaways">Key takeaways</h1>
 <ul>
 <li>
-<p>Keyboard customization is a rabbit hole.</p>
+<p>Keyboard customization is a (fun) rabbit hole.</p>
 </li>
 <li>
 <p>QWERTY is an outdated convention.</p>
