--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 ;" data-marpit-pagination-total="120">
 <h1 is="marp-h1" data-auto-scaling id="keyboards"> Keyboards!</h1>
 <h2 id="by-jono">by Jono</h2>
-<p>(to see text in speaker notes press <a href="/?view=presenter" target="_blank">&quot;p&quot;</a>)</p>
+<p><small>(see text content in speaker notes)</small></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -1897,7 +1897,6 @@
 <ul>
 <li>volume</li>
 <li>depth</li>
-<li>smoothness</li>
 <li>ping</li>
 <li>pop</li>
 <li>pitch</li>
@@ -1905,7 +1904,7 @@
 <li>grind</li>
 <li>click</li>
 <li>clack</li>
-<li>thock</li>
+<li>thock &lt;--</li>
 </ul>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
@@ -3498,7 +3497,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="invert" data-marpit-pagination="71" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="72" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+" lang="en-US" class="invert" data-marpit-pagination="71" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="72" data-class="lead" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -3509,7 +3508,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="invert" data-marpit-pagination="72" style="--class:invert;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
+" lang="en-US" class="lead" data-marpit-pagination="72" style="--class:lead;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4124,7 +4123,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-;--marpit-advanced-background-split:70%;" data-marpit-pagination-total="120" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;media/moonlander-thumb.jpg&quot;);"></figure></div></section></foreignObject><foreignObject width="30%" height="720"><section id="86" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+;--marpit-advanced-background-split:60%;" data-marpit-pagination-total="120" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;media/moonlander-thumb.jpg&quot;);"></figure></div></section></foreignObject><foreignObject width="40%" height="720"><section id="86" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4146,7 +4145,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-;--marpit-advanced-background-split:70%;" data-marpit-pagination-total="120" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
+;--marpit-advanced-background-split:60%;" data-marpit-pagination-total="120" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h2 id="thumb-clusters">Thumb clusters</h2>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
@@ -4299,7 +4298,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="invert" data-marpit-pagination="89" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="90" data-class="lead" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+" lang="en-US" class="invert" data-marpit-pagination="89" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="90" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4310,7 +4309,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="lead" data-marpit-pagination="90" style="--class:lead;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
+" lang="en-US" class="invert" data-marpit-pagination="90" style="--class:invert;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4494,7 +4493,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="invert" data-marpit-pagination="93" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="94" data-class="lead" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+" lang="en-US" class="invert" data-marpit-pagination="93" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="94" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4505,7 +4504,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="lead" data-marpit-pagination="94" style="--class:lead;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
+" lang="en-US" class="invert" data-marpit-pagination="94" style="--class:invert;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4771,7 +4770,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 <p><a href="https://www.youtube.com/watch?v=eNeYmr48JUM">Touch typing handshape comparison</a></p>
 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eNeYmr48JUM?si=0gQho2SfR7FodLL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="100" data-class="lead" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="100" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4782,7 +4781,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="lead" data-marpit-pagination="100" style="--class:lead;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
+" lang="en-US" class="invert" data-marpit-pagination="100" style="--class:invert;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4886,7 +4885,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="103" data-class="lead" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="103" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -4897,7 +4896,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="lead" data-marpit-pagination="103" style="--class:lead;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
+" lang="en-US" class="invert" data-marpit-pagination="103" style="--class:invert;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
