--- a/index.html
+++ b/index.html
@@ -3142,7 +3142,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="invert" data-marpit-pagination="63" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="64" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+" lang="en-US" class="invert" data-marpit-pagination="63" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -3164,10 +3164,43 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-;" data-marpit-pagination-total="120">
-<h1 id="key-maximization">Key Maximization</h1>
+;--marpit-advanced-background-split:50%;" data-marpit-pagination-total="120" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;./media/concorde1.jpg&quot;);"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="64" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+}
+.scroll {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  text-align: left;
+}
+" lang="en-US" class="invert" data-marpit-pagination="64" style="--class:invert;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+}
+.scroll {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  text-align: left;
+}
+;--marpit-advanced-background-split:50%;" data-marpit-pagination-total="120" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
+<h1 is="marp-h1" data-auto-scaling id="key-maximization"> Key Maximization</h1>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+}
+.scroll {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  text-align: left;
+}
+" lang="en-US" class="invert" data-marpit-pagination="64" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -3189,7 +3222,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-;" data-marpit-pagination-total="120" data-marpit-advanced-background="background"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;media/honeywellHe142.jpeg&quot;);"></figure></div></section></foreignObject><foreignObject width="1280" height="720"><section id="65" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+;" data-marpit-pagination-total="120" data-marpit-advanced-background="background"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;media/honeywellHe142.jpeg&quot;);background-size:contain;"></figure></div></section></foreignObject><foreignObject width="1280" height="720"><section id="65" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -3746,7 +3779,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-" lang="en-US" class="invert" data-marpit-pagination="76" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="77" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+" lang="en-US" class="invert" data-marpit-pagination="76" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -3768,10 +3801,41 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   overflow: scroll;
   text-align: left;
 }
-;" data-marpit-pagination-total="120">
-<p><img src="media/supine-computing-reflective-glasses.jpg" alt="" /></p>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="78" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+;" data-marpit-pagination-total="120" data-marpit-advanced-background="background"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;media/supine-computing-reflective-glasses.jpg&quot;);background-size:contain;"></figure></div></section></foreignObject><foreignObject width="1280" height="720"><section id="77" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+}
+.scroll {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  text-align: left;
+}
+" lang="en-US" class="invert" data-marpit-pagination="77" style="--class:invert;--paginate:true;--lang:en-US;--theme:uncover;--style:.columns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+}
+.scroll {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  text-align: left;
+}
+;" data-marpit-pagination-total="120" data-marpit-advanced-background="content"></section>
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+}
+.scroll {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  text-align: left;
+}
+" lang="en-US" class="invert" data-marpit-pagination="77" style="" data-marpit-pagination-total="120" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="78" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
