--- a/index.html
+++ b/index.html
@@ -1583,8 +1583,8 @@
 ;--marpit-advanced-background-split:66%;" data-marpit-pagination-total="115" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h3 is="marp-h3" data-auto-scaling id="mechanical"> Mechanical</h3>
 <ul>
-<li>durabile</li>
-<li>repairabile</li>
+<li>durable</li>
+<li>repairable</li>
 <li>customizable (sound and feel)</li>
 </ul>
 </section>
@@ -2698,7 +2698,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 }
 ;" data-marpit-pagination-total="115">
 <h1 id="functionality-2">Functionality</h1>
-<h2 id="wearabile">Wearabile</h2>
+<h2 id="wearable">Wearable</h2>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -5132,7 +5132,7 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 <h2 id="ergonomics-2">Ergonomics</h2>
 <h3 id="faq">FAQ</h3>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="104" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="104" data-marpit-fragments="1" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -5156,8 +5156,14 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 }
 ;" data-marpit-pagination-total="115">
 <h3 id="i-already-type-100-wpm-do-these-optimizations-really-make-you-faster">I already type 100 WPM. Do these optimizations really make you faster?</h3>
+<br />
+<ul>
+<li data-marpit-fragment="1">
+<h2 id="its-all-about-comfort"><strong>Its all about comfort</strong></h2>
+</li>
+</ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="105" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="105" data-marpit-fragments="1" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -5181,8 +5187,14 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 }
 ;" data-marpit-pagination-total="115">
 <h3 id="can-you-still-type-on-other-peoples-keyboards">Can you still type on other peoples keyboards?</h3>
+<br />
+<ul>
+<li data-marpit-fragment="1">
+<h2 id="yes"><strong>Yes</strong></h2>
+</li>
+</ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="106" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="106" data-marpit-fragments="1" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -5206,8 +5218,14 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 }
 ;" data-marpit-pagination-total="115">
 <h3 id="whats-the-best-layout">What's the best layout?</h3>
+<br />
+<ul>
+<li data-marpit-fragment="1">
+<h2 id="it-depends"><strong>It depends</strong></h2>
+</li>
+</ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="107" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="107" data-marpit-fragments="1" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -5230,9 +5248,15 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
   text-align: left;
 }
 ;" data-marpit-pagination-total="115">
-<h3 id="i-dont-have-time-to-learn-another-layout-is-there-something-quick-and-easy-that-i-can-do-instead">I dont have time to learn another layout. Is there something quick and easy that I can do instead?</h3>
+<h3 id="i-dont-have-time-to-learn-another-layout-is-there-something-quick-and-easy-that-i-can-do-instead">I don't have time to learn another layout. Is there something quick and easy that I can do instead?</h3>
+<br />
+<ul>
+<li data-marpit-fragment="1">
+<h2 id="thumb-clusters-1"><strong>Thumb clusters!</strong></h2>
+</li>
+</ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="108" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="108" data-marpit-fragments="1" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 1rem;
@@ -5256,6 +5280,11 @@ src="https://cdn.shopify.com/videos/c/o/v/3a5752f4c90548008e412a1febab728d.mp4" 
 }
 ;" data-marpit-pagination-total="115">
 <h3 id="seems-like-a-waste-of-money">Seems like a waste of money</h3>
+<ul>
+<li data-marpit-fragment="1">
+<h3 id="you-press-thousands-of-keys-a-day"><strong>You press thousands of keys a day</strong></h3>
+</li>
+</ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="109" data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
   display: grid;
@@ -5615,7 +5644,7 @@ with 3-D Tactile Switches</p></div><div class="bespoke-marp-note" data-index="48
 &lt;video src=&quot;./media/charachorder500wpm.mp4&quot; controls height=&quot;50%&quot;&gt;&lt;/video&gt;
 
 Note:
-Mention leaderboard controversary</p></div><div class="bespoke-marp-note" data-index="51" tabindex="0"><p>Rollup keyboard</p></div><div class="bespoke-marp-note" data-index="52" tabindex="0"><p>Laser Projection Keyboard</p></div><div class="bespoke-marp-note" data-index="54" tabindex="0"><p>Tap strap 2
+Mention leaderboard controversy</p></div><div class="bespoke-marp-note" data-index="51" tabindex="0"><p>Rollup keyboard</p></div><div class="bespoke-marp-note" data-index="52" tabindex="0"><p>Laser Projection Keyboard</p></div><div class="bespoke-marp-note" data-index="54" tabindex="0"><p>Tap strap 2
 
 Single hand typing
 Multiple mouse modes
@@ -5625,21 +5654,22 @@ Ben Vallack created a single key PCB and created a tap-dance based layout that a
 https://github.com/veggiedefender/open-and-shut</p></div><div class="bespoke-marp-note" data-index="64" tabindex="0"><p>Honeywell 142 keys</p></div><div class="bespoke-marp-note" data-index="66" tabindex="0"><p>These are screenshots of the config for my Ergodox EZ</p></div><div class="bespoke-marp-note" data-index="70" tabindex="0"><p>Optimus Popularis Keyboard
 Programmable LED screen keys
 Kind of like the Mac magic bar</p></div><div class="bespoke-marp-note" data-index="71" tabindex="0"><p>* For now we are stuck with using keyboards.
-* Typing at a desk for hours a day can only be so ergonomic.</p></div><div class="bespoke-marp-note" data-index="79" tabindex="0"><p>This is the Kinesis advantage.
+* Typing at a desk for hours a day can only be so ergonomic.
+* How we we minimize repetitive stress injuries?</p></div><div class="bespoke-marp-note" data-index="79" tabindex="0"><p>This is the Kinesis advantage.
 
 The only keyboard that I have ever used that is a joy to type on.
 
-They inspired the invention of Cherry Browns.</p></div><div class="bespoke-marp-note" data-index="86" tabindex="0"><p>https://hackaday.com/2021/08/04/inputs-of-interest-safetype-vertical-keyboard-with-mirrors-puts-pain-in-the-rear-view/</p></div><div class="bespoke-marp-note" data-index="87" tabindex="0"><p>Moonlander</p></div><div class="bespoke-marp-note" data-index="88" tabindex="0"><p>Dygma - maximixed thumb clusters
-16 keys!</p></div><div class="bespoke-marp-note" data-index="90" tabindex="0"><p>Staggering was necessarry for typewriters.
+They inspired the invention of Cherry Browns.</p></div><div class="bespoke-marp-note" data-index="86" tabindex="0"><p>https://hackaday.com/2021/08/04/inputs-of-interest-safetype-vertical-keyboard-with-mirrors-puts-pain-in-the-rear-view/</p></div><div class="bespoke-marp-note" data-index="87" tabindex="0"><p>Moonlander</p></div><div class="bespoke-marp-note" data-index="88" tabindex="0"><p>Dygma - maximized thumb clusters
+16 keys!</p></div><div class="bespoke-marp-note" data-index="90" tabindex="0"><p>Staggering was necessary for typewriters.
 
-Notice how left and right stagger are not equal. This makes travel inconsistant.</p></div><div class="bespoke-marp-note" data-index="92" tabindex="0"><p>How did we get here?
+Notice how left and right stagger are not equal. This makes travel inconsistent.</p></div><div class="bespoke-marp-note" data-index="92" tabindex="0"><p>How did we get here?
 
 
 ---
 
 - In the 1860's C. L. Sholes made the first commercial typewriter in a Milwaukee, using U.S. English.
 
-- Early prototypes used alphabetically ordered keys. But they were difficult to type with (since our fingers dont read left to right).
+- Early prototypes used alphabetically ordered keys. But they were difficult to type with (since our fingers don't read left to right).
 
 - **Fun fact**: Some had only capitol letters and numbers 2-9.
   It was suggested to use letters o and l for 0 and 1.
@@ -5664,7 +5694,7 @@ August Dvorak studied letter frequencies and the physiology of the hand.
 
 Common letters should be in the home row.
 
-Notice vowels on the left hand and special characters rearanged.</p></div><div class="bespoke-marp-note" data-index="97" tabindex="0"><p>Mention words/languages vs programming</p></div><div class="bespoke-marp-note" data-index="98" tabindex="0"><p>Many QWERTY keys are preserved as well as control commands.</p></div><div class="bespoke-marp-note" data-index="99" tabindex="0"><p>Even with tarmak, it typically takes months to become fully proficient.</p></div><div class="bespoke-marp-note" data-index="100" tabindex="0"><p>---
+Notice vowels on the left hand and special characters rearranged.</p></div><div class="bespoke-marp-note" data-index="97" tabindex="0"><p>Mention words/languages vs programming</p></div><div class="bespoke-marp-note" data-index="98" tabindex="0"><p>Many QWERTY keys are preserved as well as control commands.</p></div><div class="bespoke-marp-note" data-index="99" tabindex="0"><p>Even with tarmak, it typically takes months to become fully proficient.</p></div><div class="bespoke-marp-note" data-index="100" tabindex="0"><p>---
 
 ## Personalized layouts
 
@@ -5683,7 +5713,7 @@ The average office worker presses 2-10k keys per day. Thats millions a year.
 
 You probably spend 5+ hours a day at a keyboard. Why use a piece of junk?
 
-Unless you have a deprevation mind set. Then go for it.</p></div><div class="bespoke-marp-note" data-index="108" tabindex="0"><p># Beyond keyboards
+Unless you have a deprivation mind set. Then go for it.</p></div><div class="bespoke-marp-note" data-index="108" tabindex="0"><p># Beyond keyboards
 
 ---
 
