add link to slides

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 ;" data-marpit-pagination-total="117">
 <h1 is="marp-h1" data-auto-scaling id="keyboards"> Keyboards!</h1>
 <h2 id="by-jono">by Jono</h2>
+<br />
+<p><a href="https://jonocodes.github.io/awesome-keyboards">https://jonocodes.github.io/awesome-keyboards</a></p>
 <p><small>(see text content in speaker notes)</small></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-class="invert" data-paginate="true" data-lang="en-US" data-theme="uncover" data-style=".columns {
